--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,42 +1,42 @@
+#
+# Releaser workflow setup
+# https://goreleaser.com/ci/actions/
+#
 name: release
 
+# run only on tags
 on:
   push:
     tags:
       - 'v*'
 
+permissions:
+  contents: write # needed to write releases
+  id-token: write # needed for keyless signing
+  packages: write # needed for ghcr access
+
 jobs:
   release:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: write
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-
+          fetch-depth: 0 # this is important, otherwise it won't checkout the full tree (i.e. no previous tags)
       - uses: actions/setup-go@v5
         with:
-          go-version: '^1.22'
-
+          go-version: 1.23
+          cache: true
+      - uses: sigstore/cosign-installer@v3.7.0         # installs cosign
+      - uses: anchore/sbom-action/download-syft@v0.17.8 # installs syft
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-
-      - run: go mod tidy
-      - run: go test ./...
-
-      - name: Login to ghcr.io
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3                   # login to ghcr
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v6
+      - uses: goreleaser/goreleaser-action@v6          # run goreleaser
         with:
-          distribution: goreleaser
           version: latest
           args: release --clean
         env:
