--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,65 +1,87 @@
 project_name: adguard-exporter
+release:
+  github:
+    owner: belphemur
+    name: adguard-exporter
+changelog:
+  sort: asc
+  filters:
+    exclude:
+      - '^docs:'
+      - '^test:'
+      - '^chore:'
+  groups:
+    - title: Features
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 0
+    - title: "Bug fixes"
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+      order: 1
+    - title: "Performance"
+      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
+      order: 2
 before:
   hooks:
     - go mod tidy
 builds:
-  - env: [CGO_ENABLED=0]
+  - id: adguard-exporter
+    main: main.go
     goos:
       - linux
-      - windows
-      - darwin
     goarch:
       - amd64
       - arm64
       - arm
-    main: main.go
+    # ensures mod timestamp to be the commit timestamp
+    mod_timestamp: "{{ .CommitTimestamp }}"
+    flags:
+      # trims path
+      - -trimpath
+    ldflags:
+      - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{ .CommitDate }}
+    env:
+      - CGO_ENABLED=0
 archives:
   - format: tar.gz
 checksum:
   name_template: 'checksums.txt'
 dockers:
-  - goos: linux
-    goarch: amd64
-    build_flag_templates:
-      - "--platform=linux/amd64"
+  - image_templates:
+      - "ghcr.io/belphemur/adguard-exporter:latest"
+      - "ghcr.io/belphemur/adguard-exporter:{{ .Version }}"
     dockerfile: Dockerfile
-    image_templates:
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-amd64
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-amd64
-  - goos: linux
-    goarch: arm64
     build_flag_templates:
-      - "--platform=linux/arm64/v8"
-    dockerfile: Dockerfile
-    image_templates:
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-arm64v8
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-arm64v8
-  - goos: linux
-    goarch: arm
-    build_flag_templates:
-      - "--platform=linux/arm/v6"
-    dockerfile: Dockerfile
-    image_templates:
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-armv6
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-armv6
-  - goos: linux
-    goarch: arm
-    build_flag_templates:
-      - "--platform=linux/arm/v7"
-    dockerfile: Dockerfile
-    image_templates:
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-armv7
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-armv7
-docker_manifests:
-  - name_template: ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}
-    image_templates:
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-amd64
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-arm64v8
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-armv7
-      - ghcr.io/henrywhitaker3/adguard-exporter:{{ .Tag }}-armv6
-  - name_template: ghcr.io/henrywhitaker3/adguard-exporter:latest
-    image_templates:
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-amd64
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-arm64v8
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-armv7
-      - ghcr.io/henrywhitaker3/adguard-exporter:latest-armv6
+      - "--pull"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.name={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.source={{.GitURL}}"
+# signs the checksum file
+# all files (including the sboms) are included in the checksum, so we don't need to sign each one if we don't want to
+# https://goreleaser.com/customization/sign
+signs:
+  - cmd: cosign
+    env:
+      - COSIGN_EXPERIMENTAL=1
+    certificate: "${artifact}.pem"
+    args:
+      - sign-blob
+      - "--output-certificate=${certificate}"
+      - "--output-signature=${signature}"
+      - "${artifact}"
+      - "--yes" # needed on cosign 2.0.0+
+    artifacts: checksum
+    output: true
+# signs our docker image
+# https://goreleaser.com/customization/docker_sign
+docker_signs:
+  - cmd: cosign
+    env:
+      - COSIGN_EXPERIMENTAL=1
+    artifacts: images
+    output: true
+    args:
+      - "sign"
+      - "${artifact}"
+      - "--yes" # needed on cosign 2.0.0+
