--- a/.github/workflows/versioning.yaml
+++ b/.github/workflows/versioning.yaml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ssh-key: ${{secrets.COMMIT_KEY}}
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
