--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,3 +41,15 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Export digest
+        id: digest
+        run: |
+          echo digest=$(docker buildx imagetools inspect ghcr.io/belphemur/adguard-exporter:latest --format "{{json .Manifest.Digest}}"  | xargs) >> $GITHUB_OUTPUT
+      - name: Attest
+        uses: actions/attest-build-provenance@v1
+        id: attest
+        with:
+          subject-name: ghcr.io/belphemur/adguard-exporter
+          subject-digest: ${{ steps.digest.outputs.digest }}
+          push-to-registry: true
